# Inteli-College-2024-2B-T08-EC08-G03

./: README.md
docs/: docusaurus.config.ts  package-lock.json
docs/docs/: docs_final.md  intro.md
docs/docs/Sprints/sprint-1/: _category_.json
docs/docs/Sprints/sprint-1/arquitetura/: _category_.json  arch.md  requisitos-funcionais.md  requisitos-nao-funcionais
docs/docs/Sprints/sprint-1/etica/: _category_.json  etica.md
docs/docs/Sprints/sprint-1/negocios/: _category_.json  analise-financeira.md  matriz-de-riscos.md  (+2 more)
docs/docs/Sprints/sprint-2/: _category_.json
docs/docs/Sprints/sprint-3/: LogsSystem.md  _category_.json  backend.md  banco.md  frontend.md  watsonx.md
docs/docs/Sprints/sprint-4/: _category_.json  mudancaSpeech.md  refactoring.md
docs/docs/Sprints/sprint-5/: _category_.json  validacao_solucao.md
src/backend/: Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
src/backend/src/: app.module.ts  main.ts
src/backend/src/controllers/: app.controller.ts  chat.controller.ts  gpt.controller.ts  logs.controller.ts  position.controller.ts  user.controller.ts  wpp.controller.ts
src/backend/src/dto/: log.ts  prompt.dto.ts  user.dto.ts
src/backend/src/interfaces/: log.interface.ts  position.interface.ts
src/backend/src/services/: action.service.ts  app.service.ts  gpt.services.ts  logs.service.ts  supabase.service.ts  test.ts  user.service.ts  watson.service.ts
src/backend/src/utils/: logs.util.ts
src/cli/: main.py  poses.txt  requirements.txt
src/cli/teleop/: README.md  main.py
src/frontend/front-medtech/: package-lock.json  package.json
src/robot/: dependencies.repos  docker-compose.yml
src/robot/docker/: Dockerfile  entrypoint.sh  run_docker.sh
src/robot/maps/: map.pgm  map.yaml
src/robot/src/battery2/: CMakeLists.txt  package.xml
src/robot/src/joystick_teleop/: CMakeLists.txt  package.xml
src/robot/src/joystick_teleop/config/: joystick_teleop_params.yaml
src/robot/src/joystick_teleop/include/: joystick_teleop.hpp
src/robot/src/joystick_teleop/launch/: joystick_teleop_launch.py
src/robot/src/joystick_teleop/src/: joystick_teleop.cpp  main.cpp
src/robot/src/talker_listener/: CMakeLists.txt  package.xml
src/robot/src/talker_listener/include/: listener.hpp  talker.hpp
src/robot/src/talker_listener/launch/: talker_listener_launch.py
src/robot/src/talker_listener/src/: listener.cpp  listener_main.cpp  talker.cpp  talker_main.cpp
src/robot_server/: requirements.txt
src/robot_server/app/: __init__.py  config.py  errors.py  routes.py  services.py
src/robot_server/tests/: test_services.py
(+24 files in other folders)
